test/objects/good/method_result_method_call.lat
class C {
    D foo() {
        D d = new D;
        return d;
    }
}

class D {
    void bar() {
        printInt(21);
    }
}

int main() {
    C c = new C;
    c.foo().bar();
    return 0;
}
