test/objects/bad/objects005.lat
class o {
	void print() { printInt(x); }
}

int main() {
	o a = new o;
	a.print();
	return 0;
}
